--- a/React/01(ReactDOM).html
+++ b/React/01(ReactDOM).html
@@ -28,7 +28,7 @@
       // 추가 할 요소를 앞에 쓰고, 추가될 위치를 뒤에 쓴다.
       ReactDOM.render(element, rootElement);
       // elementV.textContent = "Hello, world!";
-      // rootElement.append(element);
+      // rootElement.append(elementV);
     </script>
   </body>
 </html>
