--- a/React/07(리렌더링).html
+++ b/React/07(리렌더링).html
@@ -45,6 +45,7 @@
         ReactDOM.render(element,rootElement)
       }
       
+      random()
       setInterval(random,1000)
     </script>
   </body>
