--- a/React/12(컴포넌트 사이드이펙트).html
+++ b/React/12(컴포넌트 사이드이펙트).html
@@ -39,7 +39,7 @@
 
         function handleChange(event){
         // 브라우저 내의 localstorage에 저장
-        window.localStorage.setItem("keyword", event.target.value)
+        window.localStorage.setItem("keyword", event.target.value) // key, value 형태로 저장
         setKeyword(event.target.value)
         setTyping(true)
         }
