--- a/React/06(JS와JSX섞어쓰기).html
+++ b/React/06(JS와JSX섞어쓰기).html
@@ -53,8 +53,8 @@
           <Number number={4}/> */}
 
       {/* map을 사용해서도 가능하다. map으로 할때에는 key를 정해줘야한다. */}
-      {[1,2,3,4,5,6,7,8,9,10].map((number)=>(
-        <Number 
+      {[1,2,3,4,5,6,7,8,9,10].map((number)=>( // 1부터 10까지 number 에 차례대로 넣어서 실행
+        <Number   // Number 형 변수
         className ="title"
         key={number}
         number={number} 
