--- a/React/React_맛보기/28(상태 끌어올리기).html
+++ b/React/React_맛보기/28(상태 끌어올리기).html
@@ -29,13 +29,8 @@
 
     const rootElement = document.getElementById("root")
   
-    const Id = () => {
-      const [id, setId] = React.useState("")
-
-      const handleIdChange = (event) => {
-        setId(event.target.value)
-        console.log(`length : ${event.target.value.length}`)
-      }
+    const Id = ({handleIdChange}) => {
+      
       return (
         <>
           <label>ID : </label>
@@ -44,12 +39,8 @@
         )
     }
 
-    const Password = () => {
-      const [password, setPassword] = React.useState("")
-
-      const handlePwChange = () => {
-        setPassword(event.target.value)
-      }
+    const Password = ({handlePwChange}) => {
+      
       return (
         <>
           <label>PW : </label>
@@ -60,16 +51,33 @@
 
 
     const App = () => {
+      const [id, setId] = React.useState("")
+
+      const handleIdChange = (event) => {
+        setId(event.target.value)
+        console.log(`length : ${event.target.value.length}`)
+      }
+
+      const [password, setPassword] = React.useState("")
+
+      const handlePwChange = () => {
+        setPassword(event.target.value)
+      }
+
       const handleLoginClick = () => {
         alert(`id : ${id} , pw : ${password}`)
       }
       return (
         <>
-          <Id/>
+          <Id handleIdChange={handleIdChange}/>
           <br/>
-          <Password/>
+          <Password handlePwChange={handlePwChange}/>
           <br/>
-          <button disabled={true} onClick={handleLoginClick}>LOGIN</button>
+          <button 
+            disabled={!(id.length>0 && password.length>0)} 
+            onClick={handleLoginClick}>
+            LOGIN
+          </button>
         </>
         )
     }
