--- a/React/React_맛보기/05(Element찍어내기).html
+++ b/React/React_맛보기/05(Element찍어내기).html
@@ -41,7 +41,7 @@
       </>  
       )
       // children 안에 새로운 태그를 찍어 낼 수도 있다.
-
+      // Paint 안에 추가된 태그들이 children 태그이다.
       // 함수를 찍어낼 수 있다.
       const element = 
       // 기존의 태그 생성 한 후에 안에 들어있는 태그를 생성하여 넣어준다.
