--- a/React/React_맛보기/07(리렌더링).html
+++ b/React/React_맛보기/07(리렌더링).html
@@ -33,6 +33,7 @@
       // random()
       
     // React : 변경되는 부분만 다시 그린다.
+    // button 태그들만 다시 그려진다.
       const rootElement = document.getElementById("root")
       function random(){
         const number = Math.floor(Math.random()*10)+1
