--- a/React/01컴포넌트 생명주기.html
+++ b/React/01컴포넌트 생명주기.html
@@ -19,6 +19,13 @@
     - 합성 이벤트 : 인터페이스는 같지만 직접 대응되지 않음
     - Bubble / Capture : Capture > target > Bubble 순서로 발생
     - return false : e.preventDefault() 해줘야한다.
+
+    조건부 렌더링
+    - 자바스크립트에서 true && expression 은 항상 expression으로 표현되고, false && expression 은 false 로 표현된다.
+    - 조건식 && expression : 조건식이 참이면 expression 출력
+    - 안그리고 싶은 경우 : return null
+
+
     */
   </script>
 </body>
