--- a/React/02 hook정리.html
+++ b/React/02 hook정리.html
@@ -17,7 +17,14 @@
 
     Class의 state : 훅을 먼저 배웠기때문에 고민 x
     
-    
+    useEffect : 데이터 fetch / 구독 / Dom 수정
+    cleanup : 구독과 구독 해지를 한 공간에서 실행
+    dependency array : 필요한 변경시에만 effect 실행 (dependency array 에 있는 상태의 변경시에만)
+
+    Custom Hook : 컴포넌트들에 반복되는 hooks 묶기
+    다양한 Hooks : 필요한 타이밍에 참고해서 사용
+
+
     */
   </script>
 </body>
