--- a/React/React_맛보기/15(훅flow).html
+++ b/React/React_맛보기/15(훅flow).html
@@ -51,7 +51,7 @@
             <button onClick={handleClick}>search</button>
             {show ? <>
               <input/>
-              <p></p>
+              <p>ㅇㄹㅇㄹ</p>
             </> : null}
           </>
         )
