--- a/React/03 composition, HOC 정리.html
+++ b/React/03 composition, HOC 정리.html
@@ -15,7 +15,7 @@
     typeof : type check
     확장성 : 다양한 상황을 품을 수 있도록
 
-    고차 컴포넌트 : 함수인데, 인자로 컴포넌트를 받고 , return 으로 새로운 컴포넌트를 반환한다.
+    HOC : 고차 컴포넌트 : 함수인데, 인자로 컴포넌트를 받고 , return 으로 새로운 컴포넌트를 반환한다.
     함수를 받아서 함수를 리턴
     */
   </script>
