--- a/React/04 Memoization.html
+++ b/React/04 Memoization.html
@@ -25,6 +25,8 @@
     Profiler : 리액트 성능 분석 도구
     callback : useCallback 전달되는 props , 함수를 메모이제이션 해준다.
     value : useMemo
+
+    useCallback(fn, deps) 는 useMemo( () => fn , deps) 와 같다.
     */
   </script>
 </body>
