--- a/React/05 Context, Portal.html
+++ b/React/05 Context, Portal.html
@@ -17,6 +17,13 @@
     재사용성 : Context를 사용하면 재사용하기 어려움 (Context로 감싸야만 재사용할 수 있다.)
     API : createContext / Provider / Consumer
     useContext : Consumer 대체
+
+
+    Portal : 뒤에나온 태그에 대해 z-index를 주고싶을때 (덮어쓰고 싶을때)
+    - public 폴더 안의 index.html에 id가 portal 인 div를 준다.
+
+    createPortal : 부모 컴포넌트 DOM 트리로부터 벗어난, 부모랑 동급인 새로운 레이어를 두고 내 children을 그리도록 한다.
+    하지만 portal 에 있더라고 Event는 root에도 버블링 되도록 리액트가 알아서 처리한다.
     */
   </script>
 </body>
