--- a/React/05 Context, Portal, Render Props.html
+++ b/React/05 Context, Portal, Render Props.html
@@ -14,7 +14,7 @@
     전역적인 데이터를 관리할 때 쓰는게 좋다.
 
     컴포넌트 트리 제약 : Props drilling의 한계를 해소하기 위해 Context가 나왔다.
-    재사용성 : Context를 사용하면 재사용하기 어려움 (Context로 감싸야만 재사용할 수 있다.)
+    재사용성 : Context를 사용하면 재사용하기 어려움 (Context로 감싸야만 재사용할 수 있기때문.)
     API : createContext / Provider / Consumer
     useContext : Consumer 대체
 
@@ -23,7 +23,12 @@
     - public 폴더 안의 index.html에 id가 portal 인 div를 준다.
 
     createPortal : 부모 컴포넌트 DOM 트리로부터 벗어난, 부모랑 동급인 새로운 레이어를 두고 내 children을 그리도록 한다.
-    하지만 portal 에 있더라고 Event는 root에도 버블링 되도록 리액트가 알아서 처리한다.
+    하지만 portal 에 있더라도 Event는 root에도 버블링 되도록 리액트가 알아서 처리한다.
+
+
+    Render Props : 컴포넌트를 재사용하기 위한 방법 중 하나. 무엇을 렌더링할 지 알려주는 함수
+    render일 필요 없다, children도 되고 뭐든 가능하다.
+    PureComponent : props, state 비교하여 성능 최적화.
     */
   </script>
 </body>
