--- a/React/React_맛보기/07(리렌더링).html
+++ b/React/React_맛보기/07(리렌더링).html
@@ -20,7 +20,7 @@
     <div id="root"></div>
 
     <script type="text/babel">
-    // 바닐라JS : 변경되는 element를 전부 다 다시 그린다.  
+    // 바닐라JS : 변경되는 element를 포함하는 부분들을 전부 다 다시 그린다.  
       // const rootElement = document.getElementById("root")
       // function random(){
       //   const number = Math.floor(Math.random()*10)+1
