--- a/React/08 Lib- Styled-components.html
+++ b/React/08 Lib- Styled-components.html
@@ -72,6 +72,17 @@
     - styled components : styled-component + @
     - composition : css안에서 css 사용
 
+    - 기능 : Fallbacks, &, Global, keyframes 등등 styled-components와 유사하다
+    - trend : styled-components 와 비교하면 emotion이 조금 더 우세하다.
+    - 사이즈 , 속도 : emotion이 더 우세하다.
+
+
+    ----------sass----------
+    npm install sass 로 설치한다.
+    sass 는 전처리기중의 하나이다. css의 확장이고, sass라는 문법으로 css스타일로 작성하면 그것이 결과물로 css로 나온다.
+    sass/scss : 보다 css와 유사한 문법 : scss
+    사용 : variables/ modules/ mixin/ extend사용 가능 
+
     */
     
 
