--- a/React/08 Lib- Styled-components.html
+++ b/React/08 Lib- Styled-components.html
@@ -83,6 +83,10 @@
     sass/scss : 보다 css와 유사한 문법 : scss
     사용 : variables/ modules/ mixin/ extend사용 가능 
 
+    sass의 syntax는 언어처럼 자체 syntax가 있음
+    interpolation은 #{}값을 주입 (마치`${}`처럼)
+    values / functions : 프로그래밍 언어스럽게 만들어준다.
+
     */
     
 
