--- a/React/09 Lib- Ui.html
+++ b/React/09 Lib- Ui.html
@@ -22,6 +22,14 @@
     Day.js를 사용한다. -> Moment.js를 쓸 필요 없다.
     Design 철학 : 단순한 컴포넌트 제공 + @
     Typography : 다양한 사이즈의 Text 제공
+    다양한 컴포넌트를 제공하여 복붙만으로 화면 구성 가능
+
+    3. React Semantic UI
+    원래는 JQuery 기반이었는데, React 용으로 제공
+    try it 항목에서 변경한것을 바로 그 화면에서 확인가능
+    as props로 semantic한 태그 사용 가능 
+    -ex) <Button as='a'> 라고 하면 a태그로 만들어진다.
+
     */
     
 
