--- a/React/11 Lib- Redux.html
+++ b/React/11 Lib- Redux.html
@@ -37,7 +37,12 @@
     -RTK Query
     -- 데이터 패칭과 캐싱할 때 쓰는 툴, 데이터 로딩에 대해 잘 다룰 수 있게 해준다.
 
+    -중간에 reducer로 비동기 통신을 넣었다. (server에 요청해서(axios) 2씩 증가)
 
+    -Hooks : useSelector / useDispatch
+    -API 통신 : 비동기 작업(RTK-Query)
+    -Redux-Thunk : Action으로 API 요청 / 결과 Store에 반영
+    creatAsyncThunk 사용
 
     */
     
