--- a/React/React_맛보기/28(상태 끌어올리기).html
+++ b/React/React_맛보기/28(상태 끌어올리기).html
@@ -33,8 +33,8 @@
       
       return (
         <>
-          <label>ID : </label>
-          <input onChange={handleIdChange} />
+          <label htmlFor='id'>ID : </label>
+          <input id='id' onChange={handleIdChange} />
         </>
         )
     }
@@ -60,7 +60,8 @@
 
       const [password, setPassword] = React.useState("")
 
-      const handlePwChange = () => {
+      const handlePwChange = (event) => {
+        console.log(event.target.value)
         setPassword(event.target.value)
       }
 
