--- a/HTML+CSS/Example/HTML_ex16(input,checkbox,radio).html
+++ b/HTML+CSS/Example/HTML_ex16(input,checkbox,radio).html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <input type="text"> <br/> <!-- br: \n 처럼 쓰임 -->
-    <input type="text"placeholder="아이디 입력하세요"> <br/>
-    <input type="text"placeholder="아이디 입력하세요" value="ASDF1234"> <br/>
-    <input type="password"placeholder="비밀번호 입력하세요"> <br/> <!-- 암호화 된다. -->
-    <label for="check1">흡연여부</lable>
-    <input type="checkbox" id="check1"> <br/>
-    <label for="check2">고혈압 여부</lable>
-    <input type="checkbox" id="check1"> <br/>
 
-    <h1>선호하는 여행지</h1>
-    <label for="japan">일본</label>
-    <input type="checkbox" id="japan">
-    <label for="china">중국</label>
-    <input type="checkbox" id="china">
-    <label for="thiland">대만</label>
-    <input type="checkbox" id="thiland"> <br/>
-    <h1>문제 1번</h1>
-    <input type="radio" name="radio_group1">    <!-- name을 일치시키면 중복선택이 불가능하다.-->
-    <input type="radio" name="radio_group1">    
-    <input type="radio" name="radio_group1">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <input type="text"> <br /> <!-- br: \n 처럼 쓰임 -->
+  <input type="text" placeholder="아이디 입력하세요"> <br />
+  <input type="text" placeholder="아이디 입력하세요" value="ASDF1234"> <br />
+  <input type="password" placeholder="비밀번호 입력하세요"> <br /> <!-- 암호화 된다. -->
+  <label for="check1">흡연여부</lable>
+    <input type="checkbox" id="check1"> <br />
+    <label for="check2">고혈압 여부</lable>
+      <input type="checkbox" id="check1"> <br />
+
+<!--input태그는 label태그와 주로 같이 사용되는데, label태그와 input태그를 연결시켜준다.
+    label 의 for = '' 와 input의 id 값을 일치시켜주면 둘이 연결된다.
+    둘이 연결시켜주면 label을 클릭했을때에도 input 입력 영역이 포커스된다.
+
+    또, label태그 안에 input을 넣어줌으로써 둘을 연결시킬수도있다.
+    input type이 text인 경우 외에도 radio 이거나 checkbox인 경우, 
+    여러 input의 name 속성을 같이 맞춰줌으로써 연관이 있는 input임을 명시해주고 사용한다.
+    
+      -->
+
+      <h1>선호하는 여행지</h1>
+      <label for="japan">일본</label>
+      <input type="checkbox" id="japan">
+      <label for="china">중국</label>
+      <input type="checkbox" id="china">
+      <label for="thiland">대만</label>
+      <input type="checkbox" id="thiland"> <br />
+      <h1>문제 1번</h1>
+      <input type="radio" name="radio_group1"> <!-- name을 일치시키면 중복선택이 불가능하다.-->
+      <input type="radio" name="radio_group1">
+      <input type="radio" name="radio_group1">
 
 
 </body>
+
 </html>
