--- a/HTML+CSS/Practice/연습.html
+++ b/HTML+CSS/Practice/연습.html
@@ -5,11 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    
+  </style>
 </head>
 <body>
+  <div class="wrap">
+    <div class="child">기기</div>
+  </div>
+
   <script>
-    let jsnArr = [{id:1, value:'김'},{id:2, value:'김부각'},{id:3, value:'김말이'},{id:4, value:'김밥'}]
-    console.log({...jsnArr[0]})
+    let $child = document.querySelector('.wrap>.child')
+    console.log($child)
+    let arr1 = [1,3,2]
+    let arr2 = [...arr1]
+    let arr3 = arr1
+    console.log(arr1===arr2)
+    console.log(arr1===arr3)
+    let arr4 = [1,2,3]
+    let arr5 = [4,5,6]
+    arr4 = [...arr5,...arr4]
+    console.log(arr4)
   </script>
 </body>
 </html>
