--- a/React/React정리/useReducer.html
+++ b/React/React정리/useReducer.html
@@ -1,5 +1,11 @@
 <!-- 
 useReducer : 상태관리 및 유지보수 용이
+- 관리 해야 할 상태가 많을때, setState를 사용 시 하나하나 다 선언해줘야한다.
+- 하지만 useReducer로 한번에 관리할 수 있다.
+- 사용하는 쪽에서는 복잡한 로직을 처리하지 않아도 되고, 복잡한 상태를 바꾸는것은 전문화된 함수가 처리한다.
+- 이전의 값과 이후의 값이 서로 상당한 관계성을 갖고 있을 때 reducer를 사용하면 상태를 변경시키는 과정을 reducer안에 은닉할 수 있다.
+
+
 - Reducer : action의 내용대로 state를 업데이트 해주는 역할
 
 - Dispatch : 내용을 보내는 역할 (요구)
