--- a/React/React정리/01 정리.html
+++ b/React/React정리/01 정리.html
@@ -9,6 +9,8 @@
 <body>
   <script>
     /*
+    npm i -D react-error-overlay@6.0.9
+
     Props
     - Props : 컴포넌트에 전달되는 단일 객체
     - 순수함수처럼 동작 : Props 자체를 수정해서는 안된다.
