--- a/HTML+CSS/Practice/flex연습.html
+++ b/HTML+CSS/Practice/flex연습.html
@@ -37,25 +37,25 @@
 
     .item1{
       background-color: blueviolet;
-      flex-grow:2;
+      /* flex-grow:2; */
       /* item에 적용, 화면이 넓어지면 같이 넓어진다. */
 
-      flex-shrink: 1;
+      /* flex-shrink: 1; */
       /* 화면이 점점 작아지면 같이 작아진다. */
       
-      flex-basis:40%;
+      /* flex-basis:40%; */
       /* 각 아이템들의 크기를 상세하게 나눌 수 있다. */
 
-      align-self:center;
+      /* align-self:center; */
       /* align-contents가 없을때, 아이템 하나의 위치를 배치할 수 있다. */
     }
     .item2{
       background-color: rgb(174, 154, 192); 
-      flex-grow:1;
+      /* flex-grow:1; */
     }
     .item3{
       background-color: rgb(5, 83, 83);
-      flex-grow:2;
+      /* flex-grow:2; */
     }
     .item4{
       background-color: rgb(22, 119, 16);
@@ -86,13 +86,13 @@
     <div class="item item1">1</div>
     <div class="item item2">2</div>
     <div class="item item3">3</div>
-    <!-- <div class="item item4">4</div>
+    <div class="item item4">4</div>
     <div class="item item5">5</div>
     <div class="item item6">6</div>
     <div class="item item7">7</div>
     <div class="item item8">8</div>
     <div class="item item9">9</div>
-    <div class="item item10">10</div> -->
+    <div class="item item10">10</div>
   </div>
 </body>
 
