--- a/React/React정리/11 Lib- Redux.html
+++ b/React/React정리/11 Lib- Redux.html
@@ -16,7 +16,7 @@
     
     flux 구조 : 관리해야 할 상태가 많을때 flux구조를 사용한다.
     Actions -> Dispatcher -> Store -> View : 단방향이다.
-            |_ ___<___Action_____<___|
+            '-<---<---Action<----<-----'
 
     provider / store
     useDispatch / dispatch
